kube/preprod/02-ingress/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: preprod
spec:
  ingressClassName: traefik
  rules:
    - host: preprod.goodfood.test
      http:
        paths:
          - path: /bo
            pathType: Prefix
            backend:
              service:
                name: back-office
                port:
                  number: 80
          
    - host: api-preprod.goodfood.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tyk-gateway
                port:
                  number: 8080
          
          # Web-App par défaut (plus tard)
          # - path: /
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: web-app
          #       port:
          #         number: 80
